<resources>
    <string name="app_name">Joaquín Soto Automóviles</string>

    <!-- Valores del fragment_nuevo.xml -->
    <string name="txvMarca">Marca</string>
    <string name="txvModelo">Modelo</string>
    <string name="txvDescripcion">Descripción</string>
    <string name="txvPrecio">Precio</string>

    <!-- Valores del menu -->
    <string name="itemModificar">Modificar</string>
    <string name="itemEliminar">Eliminar</string>
    <string name="itemPresupuesto">Generar presupuesto</string>
    <string name="itemCamara">Cámara</string>
    <string name="itemGaleria">Galeria</string>

    <!-- Valores de las actividades -->
    <string name="title_activity_detalle_coche">DetalleCoche</string>
    <string name="titNuevoExtra">Nuevo extra</string>
    <string name="titModificarExtra">Modificar extra</string>
    <string name="titResumen">Resumen</string>

    <string name="txvNombreExtra">Nombre del extra</string>
    <string name="txvDescripcionExtra">Descripción del extra</string>
    <string name="txvPrecioExtra">Precio del extra</string>
    <string name="txvPrecioCoche">Precio base del coche</string>
    <string name="txvExtras">Extras añadibles al coche</string>
    <string name="title_activity_maps">Map</string>

    <string name="txvWeb">facebook.com/joaquinsotoautomoviles</string>
    <string name="txvTelefono">957 61 75 80</string>
    <string name="txvCorreo">info@joaquinsotoautomoviles.com</string>
    <string name="txvDireccion">C/ Aceituneros Panaderos, 26</string>

</resources>
