<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"
        android:text="@string/txvNombreExtra"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txvDescripcion"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvNombre"
        android:layout_alignStart="@+id/txvNombre"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-20dp"
        android:singleLine="false"
        android:text="@string/txvDescripcionExtra"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/txvPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvDescripcion"
        android:layout_alignStart="@+id/txvNombre"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:singleLine="true"
        android:text="@string/txvPrecioExtra"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


</RelativeLayout>