<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgFotoNuevo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_coche" />

    <TextView
        android:id="@+id/txvIdCoche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txvMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imgFotoNuevo"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="10dp"
        android:text="@string/txvMarca"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txvModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txvMarca"
        android:layout_alignLeft="@+id/txvMarca"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/txvModelo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txvPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txvMarca"
        android:layout_alignLeft="@+id/txvMarca"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/txvPrecio"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
</RelativeLayout>